# auth-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  logging.py  main.py  routes.py
app/core/: logging.py
app/models/: __init__.py  database.py  log.py  session.py  token.py
app/schemas/: __init__.py  auth.py  management.py
app/services/: __init__.py  database.py  session_service.py  token_service.py  validation.py
app/utils/: __init__.py  session_id.py
