[project]
name = "flussonic-auth-backend"
version = "1.0.0"
description = "Authentication backend for Flussonic Media Server with token and session management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.31.2",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
